# CodecBase64

./: .gitignore  CMakeLists.txt  README.md  app.rc
include/: ArgParser.h  CodexManager.h  base64.h  hex.h
src/: ArgParser.cpp  CodexManager.cpp  base64.cpp  hex.cpp  main.cpp
